resources/testdeployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microbot
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: microbot
  type: ClusterIP
