resources/testdeployment/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: microbot-route
  namespace: default
spec:
  parentRefs:
  - name: microbot-gateway
    namespace: default
  hostnames:
  - k3s-test.declercklouis.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: microbot
      port: 80
